crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/decorator-auto-accessors.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: decorator-auto-accessors.js
---
# Input
```js
class C extends HTMLElement {
  accessor clicked = false;
}

```

# Output
```js
class C extends HTMLElement {
  accessor;
  clicked = false;
}

```

# Errors
```
error[SyntaxError]: expected a semicolon to end the class property, but found none
  ┌─ decorator-auto-accessors.js:2:3
  │
2 │   accessor clicked = false;
  │   ^^^^^^^^


```


